--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
+    "react-data-table-component": "^7.4.7",
     "react-dom": "^17.0.2",
     "react-faq-component": "^1.3.1",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
