--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-data-table-component": "^7.4.7",
     "react-dom": "^17.0.2",
     "react-faq-component": "^1.3.1",
+    "react-js-pagination": "^3.0.3",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
