--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-faq-component": "^1.3.1",
     "react-js-pagination": "^3.0.3",
     "react-scripts": "5.0.0",
+    "react-vertical-timeline-component": "^3.5.2",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
