--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-faq-component": "^1.3.1",
     "react-js-pagination": "^3.0.3",
+    "react-read-more-read-less": "^1.0.7",
     "react-scripts": "5.0.0",
     "react-vertical-timeline-component": "^3.5.2",
     "styled-components": "^5.3.3",
